0.30_dev
-center display frame.
-revise rect move and union methods.
-revise rect attributes.
-update for python 2/3 compatibility.

0.29    2021-04-06
-update event handling.
-update exception handling of color object.
-update mixer endian setting.
-update subsurface exception.
-update for python 2/3 compatibility.

0.28    2019-04-06
-update jpanel with event handling that registers appropriate mouse position.
-add time set_timer method.
-update display repaint to sync with program iteration.
-update sprite to revise member groups.
-update sprite argument handling.
-update sprite collide_mask to use mask.overlap.
-add mouse set_cursor and get_cursor methods.
-update mouse set_cursor to use custom image.
-update mouse set_cursor to use cursor data.
-update transform rotozoom to optimize.
-update surface area blit to optimize.
-update display update method to optimize.
-add util timer for profiling.
-update draw arc with dimension adjustment.
-update time clock for accuracy.
-revise with absolute import statements.
-update font with rendering adjustment.
-update event peek option of all types.
-update event methods to optimize.
-update draw methods to optimize with optional rect return.

0.27    2015-04-12
-update font to enhance fonts access.
-update image load to allow file-like argument.
-update draw methods to int convert argument.
-add mask.toString method.
-add rect iter method.
-add rect collide methods - collidelistall, collidedict, and collidedictall.
-add sprite collide methods - collide_rect_ratio, collide_circle, and collide_circle_ratio.
-add mousewheel event listener.
-release under MIT license.

0.26    2014-11-09
-add rect union methods.
-update methods to use rect intersection.
-update surface blit rect computation.
-update initialization to stabilize timing.
-add rect rectPool to utilize a rect pool.
-update sprite draw for performance.
-update sprite collide methods processing.
-add rect clamp methods.
-update mixer write for non-integral frames.