@@ -2,6 +2,7 @@
 -center display frame.
 -revise rect move and union methods.
 -revise rect attributes.
+-revise rect move/inflate args processing.
 -update for python 2/3 compatibility.
 
 0.29    2021-04-06
